force-app/main/default/objects/uNI_Reviewer__c/uNI_Reviewer__c.object-meta.xml
<CustomObject>
    <description>Reviewers which will take part in the Proposal Selection process on the Call For Proposals(Funding Oppty) and Submitted Proposals (Individual Application) obj. This object will also contain project team members for processess like GAD PPF, The lead implementers and contributors can also be present here,</description>
    <label>Reviewer</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Reviewer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>