force-app/main/default/objects/uNI_Reviewer__c/fields/uNI_CallForProposals__c.field-meta.xml
<CustomField>
    <fullName>uNI_CallForProposals__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relation between the Proposal Reviewer and Call for proposal</description>
    <label>Call For Proposals</label>
    <referenceTo>FundingOpportunity</referenceTo>
    <relationshipName>Proposal_Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>