force-app/main/default/objects/uNI_Reviewer__c/fields/uNI_GAMComments__c.field-meta.xml
<CustomField>
    <fullName>uNI_GAMComments__c</fullName>
    <description>stores the comments from GAM whenever they are reviewing a PRC comment?</description>
    <label>GAM Comments</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>