force-app/main/default/objects/uNI_Reviewer__c/fields/uNI_InternalReviewerDeclaration__c.field-meta.xml
<CustomField>
    <fullName>uNI_InternalReviewerDeclaration__c</fullName>
    <label>Internal Reviewer Declaration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>