force-app/main/default/objects/uNI_Reviewer__c/fields/uNI_PRCDeclaration__c.field-meta.xml
<CustomField>
    <fullName>uNI_PRCDeclaration__c</fullName>
    <label>PRC Declaration</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>