force-app/main/default/objects/uNI_Reviewer__c/fields/uNI_ReviewerDeclaredInterests__c.field-meta.xml
<CustomField>
    <fullName>uNI_ReviewerDeclaredInterests__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the reviewer declared interests while accepting the CFP reviewer invite.</description>
    <label>Reviewer Declared Interests</label>
    <type>Checkbox</type>
</CustomField>