force-app/main/default/objects/uNI_Reviewer__c/fields/uNI_ReviewerRole__c.field-meta.xml
<CustomField>
    <fullName>uNI_ReviewerRole__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>PRC</fullName>
            </value>
            <value>
                <fullName>JRC</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Director FA</fullName>
            </value>
            <value>
                <fullName>Director PD</fullName>
            </value>
            <value>
                <fullName>PD TL</fullName>
            </value>
            <value>
                <fullName>ED</fullName>
            </value>
            <value>
                <fullName>Grant Finance</fullName>
            </value>
            <value>
                <fullName>MEL</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Implementer</fullName>
            </value>
            <value>
                <fullName>Contributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>