force-app/main/default/objects/uNI_Reviewer__c/fields/uNI_ReviewerStatus__c.field-meta.xml
<CustomField>
    <fullName>uNI_ReviewerStatus__c</fullName>
    <label>Reviewer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invited</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>DOI Declared</fullName>
            </value>
            <value>
                <fullName>Rescind invitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>